Implementation of the Log4J